// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page editor plugins.renderNode calls next 1`] = `
<Page
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "mockNode",
    }
  }
/>
`;

exports[`Page editor plugins.renderNode renders a solution when passed 1`] = `
<Page
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Pages.Page",
    }
  }
/>
`;
